# building-search-app-w-ml-vespa

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
feed-master-db/: feed_dump_to_vespa.py
search/: app.py  calc_ndcg.py  calc_took.py  collect_response.py  generate_model.py  hands_on_keywords.txt.test  vespa_query.py
vespa-config/models/: hands_on_model.json
vespa-config/schemas/: simplewiki.sd
vespa-config/schemas/simplewiki/: base.profile  rerank.profile
