[tool.poetry]
name = "building-search-app-w-ml-vespa"
version = "0.1.0"
description = ""
authors = ["Satoshi Takatori"]
readme = "README.md"
packages = [{include = "building_search_app_w_ml_vespa", from = "."}]

[tool.poetry.dependencies]
python = "^3.12"
pyvespa = "^0.45.0"
scikit-learn = "^1.5.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
poethepoet = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tools.ruff]
line-length = 200

[tool.coverage.run]
branch = true
source = ["tests"]
omit = ["tests/fixtures/*"]
data_file = ".pytest_cache/.coverage"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

[tool.coverage.xml]
output = ".pytest_cache/coverage.xml"

[tool.poe.tasks]
lint = "ruff check feed-master-db"
test = "pytest"
cover = "pytest --cov=mymodule --cov-report xml"
fmt = "black feed-master-db --check"
build = ["fmt", "lint", "test"]
feed = "python feed-master-db/feed_dump_to_vespa.py"

[tool.poe.tasks.prepare_keywords]
shell = """
bzcat dataset/simplewiki-202109-pages-with-pageviews-20211001.bz2 | \
cut -f2 | \
shuf -n 4000 --random-source=dataset/simplewiki-202109-pages-with-pageviews-20211001.bz2 \
> tmp/hand_on_keywords.txt
"""

[tool.poe.tasks.prepare_test_keywords]
shell = """
cat tmp/hand_on_keywords.txt | awk 'NR==1,NR==500 {print}' > tmp/hands_on_keywords.txt.test
"""

[tool.poe.tasks.prepare_test_training]
shell = """
cat tmp/hand_on_keywords.txt | awk 'NR==501,NR==3500 {print}' > tmp/hands_on_keywords.txt.training
"""

[tool.poe.tasks.prepare_test_validation]
shell = """
cat tmp/hand_on_keywords.txt | awk 'NR==3501,NR==4000 {print}' > tmp/hands_on_keywords.txt.valiation
"""

[tool.poe.tasks.collect_response]
shell = """
./search/collect_response.py baseline tmp/baseline.txt tmp/hands_on_keywords.txt.test
"""

[tool.poe.tasks.collect_fetures]
shell = """
./search/collect_response.py feature tmp/baseline.txt tmp/hands_on_keywords.txt.test
"""

[tool.poe.tasks.calc_ndcg]
shell = """
./saerch/calc_ndcg.py tmp/baseline.txt
"""